just alter 'overflow-y: scroll' to 'overflow-y: auto;' to fix some scroll bug

--- a/packages/steedos-workflow/client/views/workflow_main.less
+++ b/packages/steedos-workflow/client/views/workflow_main.less
@@ -19,7 +19,7 @@
     //transition: right 0.3s ease-in-out;
 
     .instance-list {
-        overflow-y: scroll;
+        overflow-y: auto;
         -webkit-overflow-scrolling: touch;
         top: 51px;
         bottom: 0px;
@@ -83,7 +83,7 @@
 
 
 	.instance {
-        overflow-y: scroll;
+        overflow-y: auto;
         -webkit-overflow-scrolling: touch;
         top: 51px;
         bottom: 0px;
